--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="Emploi du temps.html"> 
    	    <p>L'emploi du temps<p>
          <a> 
-
+<a href="visio.html">
 <p> Prochaine visio-conférence <p>
       
 
