--- a/visio.html
+++ b/visio.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title> Visi- conférences </title>
+        <title> Visio-conférences </title>
         <style>
       body {
         background-image:url("10.jpg") ; 
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-       <h1> Mardi </h1>
+       <h1> Mardi 7 Avril </h1>
 
             <a href="Distanciel.html">
         <h3> Retour à l'acceuil <h3>
