--- a/Emploi du temps.html
+++ b/Emploi du temps.html
@@ -19,7 +19,7 @@
         <img src="emploi.jpg" alt="Emploi du temps" />
        <p>
        
-       <a href="Distanciel.html">
+       <a href="indedx.html">
         <h3> Retour à l'acceuil <h3>
         
     </body>
