--- a/Mardi 2.html
+++ b/Mardi 2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title> Visio-conférences </title>
+        <title> Mardi 27 Avril </title>
         <style>
       body {
         background-image:url("10.jpg") ; 
@@ -13,9 +13,11 @@
     </head>
 
     <body>
-
-      <a href="">
-       <h1> Lien pour rejoindre la visio </h1>
+       <h1> Pour le Mardi 27 Avril <h1>
+        <h3><ul>
+            <li>  <li>
+        <ul><h3>
+            <br>
 
             <a href="index.html">
         <h3> Retour à l'acceuil <h3>
