--- a/Mardi.html
+++ b/Mardi.html
@@ -15,11 +15,11 @@
     <body>
        <h1> Pour le Mardi 7 Avril <h1>
         <h3><ul>
-            <li> Physique-chimie: Exercice 3 de la fiche à faire <li>
+            <li> Physique-Chimie: Faire l'exercice 3 de la fiche <li>
         <ul><h3>
             <br>
 
-            <a href="Distanciel.html">
+            <a href="index.html">
         <h3> Retour à l'acceuil <h3>
     </body>
 </html>
