--- a/Mercredi.html
+++ b/Mercredi.html
@@ -15,11 +15,11 @@
     <body>
        <h1> Pour le Mercredi 8 Avril <h1>
         <h3><ul>
-            <li> Arts Plastiques: Finir le projet et envoyé une photo  <li>
+            <li> arts plastiques: Finir le projet et envoyer une photo  <li>
         <ul><h3>
             <br>
 
-            <a href="Distanciel.html">
+            <a href="index.html">
         <h3> Retour à l'acceuil <h3>
     </body>
 </html>
