--- a/Vendredi.html
+++ b/Vendredi.html
@@ -15,11 +15,11 @@
     <body>
        <h1> Pour le Vendredi 10 Avril <h1>
         <h3><ul>
-            <li> Francais <li>
+            <li>  <li>
         <ul><h3>
             <br>
 
-            <a href="Distanciel.html">
+            <a href="index.html">
         <h3> Retour à l'acceuil <h3>
     </body>
 </html>
