--- a/Jeudi.html
+++ b/Jeudi.html
@@ -19,7 +19,7 @@
         <ul><h3>
             <br>
 
-            <a href="Distanciel.html">
+            <a href="index.html">
         <h3> Retour à l'acceuil <h3>
     </body>
 </html>
