--- a/Jeudi.html
+++ b/Jeudi.html
@@ -15,7 +15,7 @@
     <body>
        <h1> Pour le Jeudi 9 Avril <h1>
         <h3><ul>
-            <li> Histoire: Compléter la fiche formulaire et la renvoyer par l'ENT <li>
+            <li> Histoire: Compléter la fiche formulaire et la renvoyer par l'ENT  <a href="histoire.pdf"> Télécharger le ici <li>
         <ul><h3>
             <br>
 
