--- a/Emploi du temps.html
+++ b/Emploi du temps.html
@@ -14,13 +14,12 @@
     </head>
 
     <body>
-       <h1> Emploi du temps de la semaine <h1>
+      <U> <h1> Emploi du temps de la semaine <h1></U>
        <p>
         <img src="emploi.jpg" alt="Emploi du temps" />
        <p>
        
-       <a href="indedx.html">
-        <h3> Retour à l'acceuil <h3>
+       <a href="index.html"> <h3> Retour à l'acceuil <h3>
         
     </body>
 </html>
