--- a/Jeudi 2.html
+++ b/Jeudi 2.html
@@ -13,13 +13,12 @@
     </head>
 
     <body>
-       <h1> Pour le Jeudi 29 Avril <h1>
-        <h3><ul>
-            <li>  <li>
+     <U> <h1> Pour le Jeudi 29 Avril </h1></U>
+           <h3> <li>  <li>
         <ul><h3>
             <br>
 
-            <a href="index.html">
-        <h3> Retour à l'acceuil <h3>
+            <a href="devoirs.html">
+        <h3> Retour aux devoirs <h3>
     </body>
 </html>
