--- a/Jeudi.html
+++ b/Jeudi.html
@@ -13,13 +13,13 @@
     </head>
 
     <body>
-       <h1> Pour le Jeudi 9 Avril <h1>
+      <U> <h1> Pour le Jeudi 8 Avril <h1></U>
         <h3><ul>
-            <li> Histoire: Compléter la fiche formulaire et la renvoyer par l'ENT  <a href="histoire.pdf"> Télécharger le ici <li>
+            <li> Histoire: Compléter la fiche formulaire et la renvoyer par l'ENT  <a href="histoire.pdf">Télécharger le ici <li>
         <ul><h3>
             <br>
 
-            <a href="index.html">
-        <h3> Retour à l'acceuil <h3>
+            <a href="devoirs.html">
+        <h3> Retour aux devoirs  <h3>
     </body>
 </html>
