--- a/Lundi.html
+++ b/Lundi.html
@@ -19,7 +19,7 @@
         <ul><h3>
             <br>
 
-            <a href="Distanciel.html">
-        <h3> Retour à l'acceuil <h3>
+            <a href="devoirs.html">
+        <h3> Retour aux devoirs  <h3>
     </body>
 </html>
