--- a/visio.html
+++ b/visio.html
@@ -5,17 +5,20 @@
         <title> Visio-conférences </title>
         <style>
       body {
-        background-image:url("10.jpg") ; 
+        background-image:url("7.jpg") ; 
         background-repeat: no-repeat;
-         color: white;
+         color: black;
+
          } 
      </style>
     </head>
 
     <body>
+     <U> <h1> Prochaine Visio-conférence</h1></U>
 
       <a href="">
        <h1> Lien pour rejoindre la visio </h1>
+       <br>
 
             <a href="index.html">
         <h3> Retour à l'acceuil <h3>
