--- a/Lundi 2.html
+++ b/Lundi 2.html
@@ -13,13 +13,13 @@
     </head>
 
     <body>
-       <h1> Pour le Lundi 26 Avril <h1>
+       <U><h1> Pour le Lundi 26 Avril <h1></U>
         <h3><ul>
             <li>    <li>
         <ul><h3>
             <br>
 
-            <a href="index.html">
-        <h3> Retour à l'acceuil <h3>
+            <a href="devoirs.html">
+        <h3> Retour aux devoirs <h3>
     </body>
 </html>
