--- a/Mardi.html
+++ b/Mardi.html
@@ -13,13 +13,13 @@
     </head>
 
     <body>
-       <h1> Pour le Mardi 7 Avril <h1>
+      <U> <h1> Pour le Mardi 6 Avril <h1></U>
         <h3><ul>
             <li> Physique-Chimie: Faire l'exercice 3 de la fiche <li>
         <ul><h3>
             <br>
 
-            <a href="index.html">
-        <h3> Retour à l'acceuil <h3>
+            <a href="devoirs.html">
+        <h3> Retour aux devoirs  <h3>
     </body>
 </html>
