--- a/Mercredi.html
+++ b/Mercredi.html
@@ -13,13 +13,13 @@
     </head>
 
     <body>
-       <h1> Pour le Mercredi 8 Avril <h1>
+      <U> <h1> Pour le Mercredi 7 Avril <h1></U>
         <h3><ul>
             <li> arts plastiques: Finir le projet et envoyer une photo  <li>
         <ul><h3>
             <br>
 
-            <a href="index.html">
-        <h3> Retour à l'acceuil <h3>
+            <a href="devoirs.html">
+        <h3> Retour aux devoirs  <h3>
     </body>
 </html>
