--- a/visio.html
+++ b/visio.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-     <U> <h1> Prochaine Visio-conférence</h1></U>
+     <U> <h1> Prochaines Visio-conférence</h1></U>
 
       <a href="">
        <h1> Lien pour rejoindre la visio </h1>
