--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     	  <p> <U> <h1> Attention:</h1></U> 
 
     <h2> Ce site est uniquement fait pour les élèves de la 3ème4.</h2>
-     <h2> En bas de page, il y a marqué la date de mise à jour du site.</h2>
+     <h2> En bas de page est notée la date de mise à jour du site.</h2>
      <h2> Le site est au minimum mis à jour deux fois par jour </h2> 
 
       <h2> Ce site ne vous dispense pas de regarder l'ENT car vous pouvez toujours avoir des messages personnnels par vos professeurs.</h2>
