--- a/Emploi du temps.html
+++ b/Emploi du temps.html
@@ -14,10 +14,13 @@
     </head>
 
     <body>
-      <U> <h1> Emploi du temps de la semaine <h1></U>
+      <U> <h1> Emploi du temps de la semaine du 6 au 9 Avril<h1></U>
        <p>
-        <img src="emploi2.jpg" alt="Emploi du temps" />
+        <img src="emplois1.jpg" alt="Emploi du temps" />
        <p>
+       	<br> 
+       	<U> <h1> Emploi du temps de la semaine du 26 au 30 Avril </h1></U>
+       	<img src="emploi3.jpg" alt="Emploi du temps 2"/>
        
        <a href="index.html"> <h3> Retour à l'acceuil <h3>
         
