--- a/Jeudi.html
+++ b/Jeudi.html
@@ -15,7 +15,9 @@
     <body>
       <U> <h1> Pour le Jeudi 8 Avril <h1></U>
         <h3><ul>
-            <li> Histoire: Compléter la fiche formulaire et la renvoyer par l'ENT  <a href="histoire.pdf">Télécharger le ici <li>
+            <li> Histoire: Compléter la fiche formulaire et la renvoyer par l'ENT  <a href="histoire.pdf">Télécharger le document ici </li>
+            	<a>
+            <li> Anglais: Copier la leçon et faire l'exercice A <a href="anglais.pdf"> Télécharger le document ici </li>
         <ul><h3>
             <br>
 
