--- a/Mercredi.html
+++ b/Mercredi.html
@@ -15,7 +15,7 @@
     <body>
       <U> <h1> Pour le Mercredi 7 Avril <h1></U>
         <h3><ul>
-            <li> arts plastiques: Finir le projet et envoyer une photo  <li>
+            <li> arts plastiques: Finir le projet et envoyer une photo  </li>
         <ul><h3>
             <br>
 
