--- a/anglais.html
+++ b/anglais.html
@@ -13,10 +13,11 @@
     </head>
 
     <body>
-     <U>  <h1> Anglais <h1></U>
+     <U>  <h1> Anglais </h1></U>
+       <h2> Leçon sur les quantifieurs <a href="anglais.pdf"> Télécharger la leçon ici </a></h2> 
         
 
             <a href="leçons.html">
-        <h3> Retour aux leçons  <h3>
+        <h3> Retour aux leçons  </h3>
     </body>
 </html>
