--- a/Mercredi.html
+++ b/Mercredi.html
@@ -15,7 +15,8 @@
     <body>
       <U> <h1> Pour le Mercredi 7 Avril <h1></U>
         <h3><ul>
-            <li> arts plastiques: Finir le projet et envoyer une photo  </li>
+            <li> Arts plastiques: Finir le projet et envoyer une photo  </li>
+            <li> Physiques-Chimie: Faire l'exercice 3 de la fiche sur les énergies </li>
         <ul><h3>
             <br>
 
