--- a/leçons.html
+++ b/leçons.html
@@ -5,9 +5,9 @@
         <title> Les leçons </title>
         <style>
       body {
-        background-image:url("10.jpg") ; 
+        background-image:url("7.jpg") ; 
         background-repeat: no-repeat;
-         color: white;
+         color: black;
 
          } 
      </style>
