--- a/Mardi.html
+++ b/Mardi.html
@@ -15,7 +15,7 @@
     <body>
       <U> <h1> Pour le Mardi 6 Avril <h1></U>
         <h3><ul>
-            <li>  </li>
+            <li> Education Musicale: Remplir les fiches à l'aide des documents </li>
         <ul><h3>
             <br>
 
