--- a/Vendredi.html
+++ b/Vendredi.html
@@ -15,7 +15,7 @@
     <body>
       <U> <h1> Pour le Vendredi 9 Avril <h1></U>
         <h3><ul>
-            <li>  </li>
+            <li> Mathématiques: </li>
         <ul><h3>
             <br>
 
