--- a/Vendredi.html
+++ b/Vendredi.html
@@ -15,6 +15,7 @@
     <body>
       <U> <h1> Pour le Vendredi 9 Avril <h1></U>
         <h3><ul>
+            <li> Arts Plastiques: Finir le projet et envoyer une photo </li>
             <li> Mathématiques: </li>
         <ul><h3>
             <br>
