--- a/Jeudi.html
+++ b/Jeudi.html
@@ -17,7 +17,7 @@
         <h3><ul>
             <li> Histoire: Compléter la fiche formulaire et la renvoyer par l'ENT  <a href="histoire.pdf">Télécharger le document ici </li>
             	<a>
-            <li> Anglais: Copier la leçon et faire l'exercice A <a href="anglais.pdf"> Télécharger le document ici </li>
+            <li> Anglais: Copier la leçon et faire l'exercice A <a href="anglais.pdf"> Télécharger le document ici </li> </a>
               <li> SVT: DS chapitre 6 </li>
         <ul><h3>
             <br>
