--- a/Vendredi.html
+++ b/Vendredi.html
@@ -16,7 +16,7 @@
       <U> <h1> Pour le Vendredi 9 Avril <h1></U>
         <h3><ul>
             <li> Arts Plastiques: Finir le projet et envoyer une photo </li>
-            <li> Mathématiques: </li>
+            <li> Mathématiques: suivre la fiche de séance </li>
         <ul><h3>
             <br>
 
