--- a/visio.html
+++ b/visio.html
@@ -18,7 +18,7 @@
 
      <iframe width="100%" height="480px" src="https://www.watchisup.fr/compte-a-rebours/embed/visio-conference-avec-mme-lenel-2021-04-07-10-00?backgroundcolor=&color=" frameborder="0" allowfullscreen></iframe>
 
-      <a href="https://meet24.webex.com/meet24-fr/j.php?MTID=m95b7ccf6a15d5db5f336130144e3d094">
+      <a href="https://meet24.webex.com/webappng/sites/meet24/meeting/download/052b8e87ed5e4045a424f9756ef2e2d4?MTID=m95b7ccf6a15d5db5f336130144e3d094&siteurl=meet24&launchApp=true">
        <h1> Lien pour rejoindre la visio </h1>
        <br>
 
