--- a/Mardi.html
+++ b/Mardi.html
@@ -15,7 +15,10 @@
     <body>
       <U> <h1> Pour le Mardi 6 Avril <h1></U>
         <h3><ul>
-            <li> Education Musicale: Remplir les fiches à l'aide des documents </li>
+            <li> Education Musicale: Remplir les fiches à l'aide des documents 
+            <p>  <a href="charlie.pdf"> Poly1 </p>
+              <p>  <a href="Musique et Cinéma.pdf"> Poly2 </p>
+              <p>    <a href="lien.pdf"> Poly3 </p></li>
         <ul><h3>
             <br>
 
