--- a/Vendredi.html
+++ b/Vendredi.html
@@ -16,7 +16,11 @@
       <U> <h1> Pour le Vendredi 9 Avril <h1></U>
         <h3><ul>
             <li> Arts Plastiques: Finir le projet et envoyer une photo </li>
-            <li> Mathématiques: suivre la fiche de séance </li>
+            <li> Mathématiques: suivre la fiche de séance lien en dessous
+            <p>  <a href="séance.pdf"> séance </p>
+             <p>   <a href="ex1.pdf"> Exercice1 </p>
+                 <p> <a href="ex2.pdf">   Exercice 2 </p>
+                  <p>  <a href="calculatrice.pdf"> usage calculatrice </p> </li>
         <ul><h3>
             <br>
 
