--- a/Musique.html
+++ b/Musique.html
@@ -14,6 +14,7 @@
 
     <body>
      <U>  <h1> Education Musicale <h1></U>
+        <h2> <a href="Musique et Cinéma.pdf"> Cours sur la musique et le cinéma </h2>
         
 
             <a href="leçons.html">
