--- a/math.html
+++ b/math.html
@@ -14,6 +14,7 @@
 
     <body>
      <U>  <h1> Mathématiques <h1></U>
+        <h2> <a href="calculatrice.pdf"> Cours sur l'usage de la calculatrice</h2>
         
 
             <a href="leçons.html">
