--- a/Vendredi.html
+++ b/Vendredi.html
@@ -18,7 +18,7 @@
             <li> Arts Plastiques: Finir le projet et envoyer une photo </li>
             <li> Espagnol: Ecrire la date, écouter le document audio, résumer le en 10 phrases et faites l'exercice 4 
               <h2><a href="audio espagnol.mp3"> Audio </h2>
-                <h2> <a href="CO espagnol"> Document </h2>
+                <h2> <a href="co.pdf"> Document </h2> </a>
             <li> Mathématiques: suivre la fiche de séance lien en dessous
             <p>  <a href="séance.pdf"> séance </p>
              <p>   <a href="ex1.pdf"> Exercice1 </p>
