--- a/Jeudi.html
+++ b/Jeudi.html
@@ -19,7 +19,7 @@
             	<a>
             <li> Anglais: Copier la leçon et faire l'exercice A <a href="anglais.pdf"> Télécharger le document ici </li> </a>
               <li> SVT: DS chapitre 6 </li>
-              <li> Français: lire et remplir le document <a href="eval lecture.pdf"> </li>
+              <li> Français: lire et remplir le document <a href="eval lecture.pdf"> doc </li>
         <ul><h3>
             <br>
 
