--- a/histoire.html
+++ b/histoire.html
@@ -14,6 +14,7 @@
 
     <body>
      <U><h1> Histoire </h1></U>
+     <h2> Lien vers le cours sur la décolonisation <a href="https://view.genial.ly/5e90dba1124be30da524579f/video-presentation-decolonisation"> ICI </a></h2> 
         <br>
         <U> <h1> Géographie </h1></U>
         <br>
