--- a/techno.html
+++ b/techno.html
@@ -14,6 +14,7 @@
 
     <body>
      <U>  <h1> Technologie <h1></U>
+        <h2> Leçon sur la fonction de service <a href="techno leçon.pdf"> Leçon </h2>
         
 
             <a href="leçons.html">
