--- a/Mardi 2.html
+++ b/Mardi 2.html
@@ -15,7 +15,7 @@
     <body>
        <U><h1> Pour le Mardi 27 Avril <h1></U>
         <h3><ul>
-            <li>  </li>
+            <li> technologie: Faire l'analyse fonctionnelle du cartable <a href="techno.pdf"> DOC   </li>
         <ul><h3>
             <br>
 
