--- a/Mercredi 2.html
+++ b/Mercredi 2.html
@@ -15,7 +15,7 @@
     <body>
        <U><h1> Pour le Mercredi 28 Avril <h1></U>
         <h3><ul>
-            <li> </li>
+            <li>Physiques-Chimie:Copier l'exemple et faire l'exercice 4 de la fiche </li>
         <ul><h3>
             <br>
 
