--- a/ph.html
+++ b/ph.html
@@ -14,6 +14,7 @@
 
     <body>
      <U>  <h1> Physiques-Chimie <h1></U>
+     	<h2> Chapitre 8: L'énergie mécanique <a href="physique.pdf"> Leçon </a></h2>
         
 
             <a href="leçons.html">
