--- a/Jeudi.html
+++ b/Jeudi.html
@@ -18,7 +18,7 @@
             <li> Histoire: Compléter la fiche formulaire et la renvoyer par l'ENT  <a href="histoire.pdf">Télécharger le document ici </li>
             	<a>
             <li> Anglais: Copier la leçon et faire l'exercice A <a href="anglais.pdf"> Télécharger le document ici </li> </a>
-              <li> SVT: DS chapitre 6 </li>
+              <li> SVT: DS chapitre 6 <a href="svt.pdf"> Aide pour le DS </a></li>
               <li> Français: lire et remplir le document <a href="eval lecture.pdf"> doc </li>
         <ul><h3>
             <br>
