--- a/SVT.html
+++ b/SVT.html
@@ -14,6 +14,7 @@
 
     <body>
      <U>  <h1> SVT <h1></U>
+     	<h2> Cours <a href="cours svt.pdf"> Leçon </a></h2>
         
 
             <a href="leçons.html">
