--- a/Vendredi.html
+++ b/Vendredi.html
@@ -23,7 +23,8 @@
             <p>  <a href="séance.pdf"> séance </p>
              <p>   <a href="ex1.pdf"> Exercice1 </p>
                  <p> <a href="ex2.pdf">   Exercice 2 </p>
-                  <p>  <a href="calculatrice.pdf"> usage calculatrice </p> </li>
+                  <p>  <a href="calculatrice.pdf"> usage calculatrice </p> </a> </li>
+                    <li> Français: Ouvrir le manuel page 90, étudier les images et répondre au question 1,2,4 et 6 page 91 <a href="lelivrescolaire.fr"> Lien vers le manuel </a></li>
         <ul><h3>
             <br>
 
