--- a/Mardi 2.html
+++ b/Mardi 2.html
@@ -15,7 +15,12 @@
     <body>
        <U><h1> Pour le Mardi 27 Avril <h1></U>
         <h3><ul>
-            <li> technologie: Faire l'analyse fonctionnelle du cartable <a href="techno.pdf"> DOC   </li>
+            <li> technologie: Faire l'analyse fonctionnelle du cartable <a href="techno.pdf"> DOC </a> </li>
+            <li> Mathématiques: Suivre la fiche de séance </li>
+          <h3>  <a href="séance math.pdf"> Séance </a></h3>
+          <h3><a href="leçon math.pdf"> Leçon </a></h3>
+          <h3> <a href="triangle .pdf"> Exercice </a></h3>
+
         <ul><h3>
             <br>
 
