--- a/Vendredi 2.html
+++ b/Vendredi 2.html
@@ -15,7 +15,9 @@
     <body>
      <U>  <h1> Pour le Vendredi 30 Avril <h1></U>
         <h3><ul>
-            <li> </li>
+            <li>Espagnol: Faire la fiche d'activité <a href="espagnol2.pdf">DOC </li></a>
+            <li> Musique: faire la fiche <a href="musique2.pdf"> DOC</a></li>
+              <li> Géographie: Faire la fiche <a href="geo.pdf"> DOC </a></li>
         <ul><h3>
             <br>
 
