--- a/Jeudi 2.html
+++ b/Jeudi 2.html
@@ -14,7 +14,7 @@
 
     <body>
      <U> <h1> Pour le Jeudi 29 Avril </h1></U>
-           <h3> <li>  </li>
+           <h3> <li> Anglais: Faire les exercices <a href="anglais2.pdf"> DOC </a></li>
         <ul><h3>
             <br>
 
