--- a/Vendredi 2.html
+++ b/Vendredi 2.html
@@ -18,6 +18,11 @@
             <li>Espagnol: Faire la fiche d'activité <a href="espagnol2.pdf">DOC </li></a>
             <li> Musique: faire la fiche <a href="musique2.pdf"> DOC</a></li>
               <li> Géographie: Faire la fiche <a href="geo.pdf"> DOC </a></li>
+              <li> Mathématiques: Lire la fiche séance, lire le cours puis faire les fiches d'exercices 1 et 2
+                <a href="fiche m.pdf"> fiche séance
+                  <a href="cours m .pdf"> cours
+                    <a href="ex m 1.pdf"> Exercice 1
+                      <a href="ex m 2.pdf"> Exercice 2
         <ul><h3>
             <br>
 
