--- a/Mercredi 2.html
+++ b/Mercredi 2.html
@@ -16,6 +16,7 @@
        <U><h1> Pour le Mercredi 28 Avril <h1></U>
         <h3><ul>
             <li>Physiques-Chimie:Copier l'exemple et faire l'exercice 4 de la fiche </li>
+            <li>Français: faire les question 1,2,4,5,7 et 9 page 168-169 du livre <a href="https://www.lelivrescolaire.fr/page/15570244"> Lien vers le livre </a></li>
         <ul><h3>
             <br>
 
