--- a/Vendredi 2.html
+++ b/Vendredi 2.html
@@ -19,10 +19,10 @@
             <li> Musique: faire la fiche <a href="musique2.pdf"> DOC</a></li>
               <li> Géographie: Faire la fiche <a href="geo.pdf"> DOC </a></li>
               <li> Mathématiques: Lire la fiche séance, lire le cours puis faire les fiches d'exercices 1 et 2
-                <a href="fiche m.pdf"> fiche séance
-                  <a href="cours m .pdf"> cours
-                    <a href="ex m 1.pdf"> Exercice 1
-                      <a href="ex m 2.pdf"> Exercice 2
+                <li><a href="fiche m.pdf"> fiche séance</a></li>
+                  <li><a href="cours m .pdf"> cours</a></li>
+                   <li> <a href="ex m 1.pdf"> Exercice 1</a></li>
+                    <li>  <a href="ex m 2.pdf"> Exercice 2</a></li>
         <ul><h3>
             <br>
 
