--- a/visio.html
+++ b/visio.html
@@ -17,9 +17,9 @@
      <U> <h1> Prochaines Visio-conférence</h1></U>
 
         <br>
-       <iframe width="100%" height="480px" src="https://www.watchisup.fr/compte-a-rebours/embed/visio-conference-avec-mme-bara-2021-04-09-15-40?backgroundcolor=&color=" frameborder="0" allowfullscreen></iframe>
-       <a href="https://meet70.webex.com/webappng/sites/meet70/meeting/download/6314bc77045140c0a94b3c87bb8aad7e?siteurl=meet70&MTID=m8e4abbfecfccea4456121d2cc2ec5a9f">
-        <h1> Lien pour rejoindre la visio
+      <iframe width="100%" height="480px" src="https://www.watchisup.fr/compte-a-rebours/embed/visio-conference-avec-mme-means-2021-04-30-13-40?backgroundcolor=&color=" frameborder="0" allowfullscreen></iframe>
+       <a href="http://college.cned.fr/cv/314681/271">
+        <h1> Lien pour rejoindre la visio</h1>
 
             <a href="index.html">
         <h3> Retour à l'acceuil <h3>
