--- a/devoirs.html
+++ b/devoirs.html
@@ -57,6 +57,9 @@
           <h2> Vendredi 30 Avril </h2>
           <a>
             <br>
+           <a href="rentrée.html"> 
+            <h2> La rentrée </h2>
+            <br>
 
             <a href="index.html">
               <h3> Retour à l'acceuil </h3>
