--- a/rentrée.html
+++ b/rentrée.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title> Mercredi 28 Avril </title>
+        <title> Rentrée </title>
         <style>
       body {
         background-image:url("10.jpg") ; 
@@ -15,8 +15,8 @@
     <body>
        <U><h1> Pour le Mercredi 28 Avril <h1></U>
         <h3><ul>
-            <li>Physiques-Chimie:Copier l'exemple et faire l'exercice 4, 5 et 6 de la fiche <a href="physique2.pdf"> Fiche </li></a>
-            <li>Français: faire les question 1,2,4,5,7 et 9 page 168-169 du livre <a href="https://www.lelivrescolaire.fr/page/15570244"> Lien vers le livre </a></li>
+            <li> Géographie: Faire la fiche <a href="geo.pdf"> DOC </a></li>
+            <li> Technologie: Faire l'exercice <a href="techno2.pdf"> Fiche </a></li>
         <ul><h3>
             <br>
 
