--- a/Jeudi 2.html
+++ b/Jeudi 2.html
@@ -15,6 +15,7 @@
     <body>
      <U> <h1> Pour le Jeudi 29 Avril </h1></U>
            <h3> <li> Anglais: Faire les exercices <a href="anglais2.pdf"> DOC </a></li>
+           	<li> Histoire: Remplir le formulaire <a href="histoire2.odt"> DOC </a></li>
         <ul><h3>
             <br>
 
