--- a/rentrée.html
+++ b/rentrée.html
@@ -17,6 +17,7 @@
         <h3><ul>
             <li> Géographie: Faire la fiche <a href="geo.pdf"> DOC </a></li>
             <li> Technologie: Faire l'exercice <a href="techno2.pdf"> Fiche </a></li>
+            <li> Copier la leçon de SVT <a href="svt2.pdf"> Leçon </a></li>
         <ul><h3>
             <br>
 
