--- a/rentrée.html
+++ b/rentrée.html
@@ -18,6 +18,10 @@
             <li> Géographie: Faire la fiche <a href="geo.pdf"> DOC </a></li>
             <li> Technologie: Faire l'exercice <a href="techno2.pdf"> Fiche </a></li>
             <li> Copier la leçon de SVT <a href="svt2.pdf"> Leçon </a></li>
+            <li> Mathématiques: Faire l'exercice </li>
+           <li> <a href="fiche math.pdf"> Fiche séance </a></li>
+           <li> <a href="exercice math.pdf"> Exercice </a></li>
+
         <ul><h3>
             <br>
 
