--- a/HG.html
+++ b/HG.html
@@ -44,6 +44,7 @@ a:active {
      </style>
     </head>
     <h1> Histoire</h1>
+    <br>
 <a href="decolo.pdf">
    <U> <h2> Chapitre décolonisation </h2></U>
     <a href="europefr.pdf">
@@ -61,7 +62,8 @@ a:active {
     <a href="seconde guerre.pdf">
     <U><h2> Chapitre sur la seconde guerre mondiale </h2></U>
     <br>
-    <h1> Géographie </h1>
+   </a><h1> Géographie </h1>
+   <br>
     <a href="faibles densités.pdf">
     <U><h2> chapitre sur les espaces de faibles densités </h2></U>
     <a href="les aires urbaines en france.pdf">
