--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@ a {
 }
 
 a:link {
-  color: #E9610E;
+  color: #12EBC7;
 }
 
 a:visited {
-  color: #E9610E;
+  color: #12EBC7;
 }
 
 a:focus {
   border-bottom: 1px solid;
-  background: #E9610E;
+  background: #12EBC7;
 }
 
 a:hover {
   border-bottom: 1px solid;
-  background: #E9610E;
+  background: #12EBC7;
 }
 
 a:active {
