--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ a:active {
      	<br> 
      	<br>
 
-       <h4>  Mis à jour: Mercredi 23 Juin à</h4>
+       <h4>  Mis à jour: Mercredi 23 Juin à 15h54</h4>
              	     	
     </body>
 </html>
