--- a/physiques.html
+++ b/physiques.html
@@ -65,7 +65,7 @@ a:active {
                                  <a href="physiques9.jpg">
                                   <U>  <h2> Chapitre 9</h1></U>
                    <a href="physiques10.jpg">
-                 <U>  <h2> Chapitre 10</h2><</U>
+                 <U>  <h2> Chapitre 10</h2></U>
                                          <a href="physiques11.jpg">
                     <U><h2>formules</h2></U>
 
