--- a/math.html
+++ b/math.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title> Mathématiques </title>
+        <title> Equipe U17 Région</title>
         <style>
       body {
         background-image:url("10.jpg") ; 
@@ -20,21 +20,21 @@ a {
 }
 
 a:link {
-  color: #E91F0E;
+  color: #E9610E;
 }
 
 a:visited {
-  color: #E91F0E;
+  color: #E9610E;
 }
 
 a:focus {
   border-bottom: 1px solid;
-  background: #E91F0E;
+  background: #E9610E;
 }
 
 a:hover {
   border-bottom: 1px solid;
-  background: #E91F0E;
+  background: #E9610E;
 }
 
 a:active {
@@ -43,14 +43,13 @@ a:active {
 }
      </style>
     </head>
-    <h1> Mathématiques </h1>
-<a href="math1.pdf">
-<U><h2>Partie 1 </h2></U>
-<a href="math2.pdf">
-<U><h2>Partie 2 </h2></U>
-<a href="math3.pdf">
-<U><h2>Partie 3 </h2></U><br>
-            <a href="DNB.html">
-      <U>  <h3> Retour aux fiches de révision </h3></U>
+    <U><h1>Mathématiques</h1></U>
+    <br>
+    <a href="https://mep-outils.sesamath.net/manuel_numerique/?ouvrage=ms2_2019"> <h1> Lien vers le sesamath </h1>
+    <a href="dm.html"> <h2> DM </h2>
+   <br>
+   <a href="index.html"> <h2> Retour à la page d'acceuil </h2>
+   
+
     </body>
 </html>
