--- a/math.html
+++ b/math.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title> Equipe U17 Région</title>
+        <title> Mathématiques</title>
         <style>
       body {
         background-image:url("10.jpg") ; 
